feat: switch to nextjs, add mods page
